--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 html{
     margin: 0;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     padding: 0;
     box-sizing: border-box;
 }
@@ -13,3 +14,7 @@ body{
     align-items: center;
     text-align: center;
 }
+
+/* .quote-container{
+    width: ;
+} */
