--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 html{
     margin: 0;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Segoe UI';
     padding: 0;
     box-sizing: border-box;
 }
@@ -15,6 +15,33 @@ body{
     text-align: center;
 }
 
-/* .quote-container{
-    width: ;
-} */
+.quote-container{
+    width: auto ;
+    max-width : 900px;
+    padding: 20px 30px;
+    padding: 20px 30px;
+    border-radius: 10px;
+    background-color: rgba(255, 255, 255, 0.4);
+    box-shadow: 0 10px 10px 10px rgba(0, 0, 0, 0.2);
+
+}
+
+.quote-text {
+    font-size: 2.75rem;
+  }
+  
+.long-quote {
+    font-size: 2rem;
+}
+  
+.lni-quotation {
+    font-size: 4rem;
+}
+  
+.quote-author {
+    margin-top: 15px;
+    font-size: 2rem;
+    font-weight: 400;
+    font-style: italic;
+}
+  
